# sck-core-report

./: README.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
core_report/: __init__.py  main.py
tests/: __init__.py  test_handler.py
